added more apis
